@@ -1,0 +1,1 @@
+require_relative '../bm_app_aobench.rb'
